--- a/themes/gas/css/style.css
+++ b/themes/gas/css/style.css
@@ -61,6 +61,9 @@ h5 a:hover {
   color: #AAAAAA;
   color: rgba(0,0,0,0.5);
 }
+.text-centered {
+	text-align: center;
+}
 ol.orbit-bullets {
   position: relative;
   padding: 0.5em;
@@ -775,9 +778,15 @@ h3.blockheading {
 /* PROFILE PAGE */
 .ProfilePage .profile {
 	padding: 0.5em 1.2em 1.5em 1.2em;
-	background: #d4d3d3;
-	background: rgba(255,255,255,0.2);
+	background: #EFEFEF;
+	background: rgba(255,255,255,0.5);
 	margin-bottom: 0.5em;
+}
+.ProfilePage .profile h4 {
+	font-size: 1.2em;
+}
+#profileModal img {
+	margin-bottom: 1em;
 }
 
 
@@ -1264,6 +1273,10 @@ button:focus {
 
 .galleria.fullscreen { z-index: 99999; background: #000000; position: fixed; left: 0 !important; top: 0 !important; bottom: 0 !important; right: 0 !important;
 	width: 100% !important; height: 100% !important;
+}
+
+.ProfilePage h4 {
+	margin-bottom: 0;
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
