Added load more placeholder

--- a/themes/gas/css/style.css
+++ b/themes/gas/css/style.css
@@ -1435,3 +1435,9 @@ button:focus {
 	text-transform: uppercase;
 	margin-right: 10px;
 }
+.BrandView .sub-nav dd a:hover {
+	color: #FFF;
+}
+.BrandView .productwrap {
+	padding: 1.2em;
+}
