--- a/themes/gas/css/style.css
+++ b/themes/gas/css/style.css
@@ -1,10 +1,3 @@
-/* @override 
-	http://gas.sixthhouse.com/gas/themes/gas/css/style.css
-	http://localhost/gas/themes/gas/css/style.css
-	http://173.230.155.18/themes/gas/css/style.css
-	http://gas.sixthhouse.com/themes/gas/css/style.css
-	http://gas.sixthhouse.com/themes/gas/css/print.css */
-
 @import "http://fonts.googleapis.com/css?family=Lato:400,700&.css)";
 
 html {
@@ -1076,12 +1069,12 @@ a.morelink {
 	color: #FFF;
 }
 .saleswrap {
-	background-color: #000 !important;
-	background-size: 100% !important;
+	background-color: #000;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;	
+	background-position: 50% 50% !important;
 	position: relative;
 	margin-bottom: 1.5em;
 }
