--- a/themes/gas/css/style.css
+++ b/themes/gas/css/style.css
@@ -22,6 +22,13 @@ a {
 }
 p strong {
 	color: #000;
+	font-weight: 700;
+}
+.button {
+	font-weight: 300;
+}
+.button strong {
+	color: #FFF;
 }
 .button {
 	text-transform: uppercase;
