--- a/themes/gas/css/style.css
+++ b/themes/gas/css/style.css
@@ -8,17 +8,18 @@ html {
 /*  background-attachment: none, fixed;*/
 }
 body {
-  background: #252525;
+  background: #222222;
   color: #333333;
-  color: rgba(0, 0, 0, 0.6);
+  /*color: rgba(0, 0, 0, 0.6);*/
   font-family: "Lato", "Helvetica Neue", _sans-serif;
+  padding-top: 32px;
 }
 a {
-	-o-transition:.5s ease-out;
-	  -ms-transition:.5s ease-out;
-	  -moz-transition:.5s ease-out;
-	  -webkit-transition:.5s ease-out;
-	  transition:.5s ease-out;
+	/*-o-transition:.3s ease-out;
+  -ms-transition:.3s ease-out;
+  -moz-transition:.3s ease-out;
+  -webkit-transition:.3s ease-out;
+  transition:.3s ease-out;*/
 }
 p strong {
 	color: #000;
@@ -88,6 +89,11 @@ h5 a:hover {
   color: #AAAAAA;
   color: rgba(0,0,0,0.5);
 }
+
+.layout {
+  background: #E8E8E8;
+}
+
 ol.orbit-bullets {
   position: relative;
   padding: 0.5em;
@@ -100,10 +106,10 @@ ol.orbit-bullets {
 ol.orbit-bullets li {
   float: none !important;
   display: inline-block !important;
-  -moz-box-shadow:  0px 2px 8px rgba(0, 0, 0, 0.5);
+  /*-moz-box-shadow:  0px 2px 8px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow:  0px 2px 8px rgba(0, 0, 0, 0.5);
   box-shadow:  0px 2px 8px rgba(0, 0, 0, 0.5);
-  background: #ffffff;
+  */background: #ffffff;
   width: 1em;
   height: 1em;
 }
@@ -134,9 +140,9 @@ form.searchform input {
   -moz-border-radius: 2em;
   border-radius: 2em;
   padding-left: 2.2em;
-  -moz-box-shadow:  0px 3px 8px rgba(0, 0, 0, 0.5);
+  /*-moz-box-shadow:  0px 3px 8px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow:  0px 3px 8px rgba(0, 0, 0, 0.5);
-  box-shadow:  0px 3px 8px rgba(0, 0, 0, 0.5);
+  box-shadow:  0px 3px 8px rgba(0, 0, 0, 0.5);*/
   margin: 0;
   background: #222;
   font-family: "Lato", Arial, _sans-serif;
@@ -157,69 +163,12 @@ form.searchform i {
   z-index: 100;
   color: #DDD;
 }
-.ui-menu {
-  position: absolute;
-  cursor: default;
-  top: 0;
-  z-index: 900;
-  list-style-type: none;
-/*  -moz-box-shadow:  0 0 0.5em rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow:  0 0 0.5em rgba(0, 0, 0, 0.2);
-  box-shadow:  0 0 0.5em rgba(0, 0, 0, 0.2);
-*/
-/*  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;*/
-  background: #FFF;
-  border: 1px solid #aaaaaa;
-}
-.ui-menu .ui-menu-item {
-  margin: 0;
-  padding: 0;
-  text-transform: uppercase;
-  max-width: 330px;
-}
-.ui-menu .ui-menu-item a {
-  display: block;
-  padding: .2em .4em;
-  line-height: 1.5;
-  zoom: 1;
-/*  border-bottom: 1px solid #dddddd;*/
-  margin: 1px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-.ui-menu-loading {
-  background: #ffffff url('mysite/images/loader.gif') right center no-repeat;
-}
-* html .ui-menu {
-  width: 1px;
-}
-.ui-state-hover,
-.ui-widget-content .ui-state-hover,
-.ui-widget-header .ui-state-hover,
-.ui-state-focus,
-.ui-widget-content .ui-state-focus,
-.ui-widget-header .ui-state-focus {
-  background: #AAAAAA;
-  color: #ffffff;
-  border-bottom: none;
-}
-.ui-helper-hidden-accessible {
-  display: none;
-}
+
+
 .menuwrap {
   border-bottom: 1px solid #aaaaaa;
   border-top: 1px solid #aaaaaa;
   background: #e1e0e0;
-  background: -moz-linear-gradient(top, #ffffff 48%, #e1e0e0 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(48%, #ffffff), color-stop(100%, #e1e0e0));
-  background: -webkit-linear-gradient(top, #ffffff 48%, #e1e0e0 100%);
-  background: -o-linear-gradient(top, #ffffff 48%, #e1e0e0 100%);
-  background: -ms-linear-gradient(top, #ffffff 48%, #e1e0e0 100%);
-  background: linear-gradient(to bottom, #ffffff 48%, #e1e0e0 100%);
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffff', endColorstr='#e1e0e0', GradientType=0);
 }
 ul.gasmenu {
   padding: 0 !important;
@@ -255,17 +204,17 @@ ul.gasmenu {
   position: absolute;
   z-index: 3000;
   left: 0px;
-  top: 2.5em;
+  top: 2.3em;
   background: #ffffff;
   width: 200% !important;
   border: 1px solid #aaaaaa;
   padding: 0 !important;
   margin: 0 !important;
   max-height: 0px;
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  -moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 .gasmenu li.has-dropdown ul.sub-nav li {
   width: 100% !important;
@@ -321,16 +270,19 @@ ul.fancydrop li a {
 .sectionwrap {
   background: #999999;
 }
+.menuwrap,
 div.gassection p.title {
   background: #e1e0e0;
-  background: -moz-linear-gradient(top, #ffffff 48%, #e1e0e0 100%);
+  background: -moz-linear-gradient(top, #ffffff 0%, #e1e0e0 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(48%, #ffffff), color-stop(100%, #e1e0e0));
-  background: -webkit-linear-gradient(top, #ffffff 48%, #e1e0e0 100%);
-  background: -o-linear-gradient(top, #ffffff 48%, #e1e0e0 100%);
-  background: -ms-linear-gradient(top, #ffffff 48%, #e1e0e0 100%);
-  background: linear-gradient(to bottom, #ffffff 48%, #e1e0e0 100%);
+  background: -webkit-linear-gradient(top, #ffffff 0%, #e1e0e0 100%);
+  background: -o-linear-gradient(top, #ffffff 0%, #e1e0e0 100%);
+  background: -ms-linear-gradient(top, #ffffff 0%, #e1e0e0 100%);
+  background: linear-gradient(to bottom, #ffffff 0%, #e1e0e0 100%);
   filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffff', endColorstr='#e1e0e0', GradientType=0);
 }
+/*div.gassection p.title {  
+}*/
 div.gassection p.title a {
   color: #333333;
   font-size: 0.9em;
@@ -447,31 +399,32 @@ div.gassection p.title a {
 .slideshow-wrapper img {
   width: 100%;
 }
-#outer-wrap {
-	width: 100%;
-	overflow:hidden;
+
+
+/* SIDE NAVIGATION  */
+.sidenav {
+  display: none;
 }
-#inner-wrap {
-  position: relative;
-/*  width: 100%;*/
-  border-top: 32px solid #333;;
-  background: #E8E8E8;
-  min-height: 1000px;
-  z-index: 2 !important;
-/*  -webkit-backface-visibility: hidden;*/
+.js-ready .sidenav {
+  display: block;
 }
-#inner-wrap .layout {
-/*	-webkit-backface-visibility: hidden;*/
+.sidenav,
+.minimenu .togglebtn {
+   -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-ou;
 }
 .sidenav {
   z-index: 2;
   position: fixed;
   overflow: hidden;
-  width: 100%;
   color: #ffffff;
   top: 0;
-  display: none;
+  /*display: none;*/
   text-transform: uppercase;
+  background: #333;
+  z-index: 88888;
 }
 .sidenav h3,
 .sidenav h4 {
@@ -508,7 +461,7 @@ div.gassection p.title a {
 .sidenav li a:focus,
 .sidenav li a:hover {
   color: #DDDDDD;
-  background: rgba(255, 255, 255, 0.1);
+  background: #3a3a3a;
 }
 .sidenav li a {
   display: block;
@@ -558,96 +511,77 @@ div.gassection p.title a {
   color: #ffffff;
   margin-bottom: 0;
 }
-.sidenav:not(:target) {
+/*.sidenav:not(:target) {
   z-index: 1;
   height: 0;
-}
+}*/
+
+/* SIDENAV PLACEMENT */
 .js-ready .sidenav .close-btn:focus,
 .js-ready #nav .close-btn:hover {
   filter: progid:dximagetransform.microsoft.alpha(Opacity=100);
   opacity: 1;
 }
-.js-ready .sidenav {
+.sidenav {
   height: 100%;
-  width: 70%;
+  width: 20%;
 }
-.js-ready .sidenav-left {
-	left:0;
+.sidenav-left {
+	left: -20%;
 }
-.js-ready .sidenav-right {
-	right:0;
+.sidenav-right {
+	right: -20%;
 }
-
-.js-ready #inner-wrap {
-  left: 0;
+.js-nav-left .sidenav-left {
+  left: 0%;
 }
-.js-nav-left #inner-wrap {
-  left: 70%;
+.js-nav-right .sidenav-right {
+  right: 0%;
 }
-.js-nav-right #inner-wrap {
-  left: -70%;
+.js-nav-left .minimenu .toggleleft {
+  left: 20%;
 }
-.js-nav-right div.minimenu-inner {
-	right: 20%;
+.js-nav-right .minimenu .toggleright {
+  right: 20%;
 }
-
-.js-ready div.minimenu-inner {
-	-webkit-transition: all 300ms ease-out;
-	-moz-transition: all 300ms ease-out;
-	-o-transition: all 300ms ease-out;
-	transition: all 300ms ease-out;
-}
-.csstransforms3d.csstransitions.js-ready #inner-wrap {
-  left: 0;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  -o-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  -webkit-transition: -webkit-transform 500ms ease;
-  -moz-transition: -moz-transform 500ms ease;
-  -o-transition: -o-transform 500ms ease;
-  transition: transform 500ms ease;
-/*  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;*/
-  backface-visibility: hidden;
-  webkit-perspective: 1000;
-}
-.csstransforms3d.csstransitions.js-nav-left #inner-wrap {
-  -webkit-transform: translate3d(70%, 0, 0) scale3d(1, 1, 1);
-  -moz-transform: translate3d(70%, 0, 0) scale3d(1, 1, 1);
-  -ms-transform: translate3d(70%, 0, 0) scale3d(1, 1, 1);
-  -o-transform: translate3d(70%, 0, 0) scale3d(1, 1, 1);
-  transform: translate3d(70%, 0, 0) scale3d(1, 1, 1);
-  webkit-perspective: 1000;
-}
-.csstransforms3d.csstransitions.js-nav-right #inner-wrap {
-  -webkit-transform: translate3d(-70%, 0, 0) scale3d(1, 1, 1);
-  -moz-transform: translate3d(-70%, 0, 0) scale3d(1, 1, 1);
-  -ms-transform: translate3d(-70%, 0, 0) scale3d(1, 1, 1);
-  -o-transform: translate3d(-70%, 0, 0) scale3d(1, 1, 1);
-  transform: translate3d(-70%, 0, 0) scale3d(1, 1, 1);
-  webkit-perspective: 1000;
+@media screen and (max-width: 764px) {
+  .sidenav {
+    width: 70% !important;
+  }
+  .sidenav-left {
+    left: -70%;
+  }
+  .sidenav-right {
+    right: -70%;
+  }
+  .js-nav-left .mobilemenu {
+    left: 70%;
+  }
+  .js-nav-right .mobilemenu {
+    right: 70%;
+  } 
 }
 
+/* TOGGLE BUTTONS */
 
 .togglebtn {
   z-index: 5000;
   margin-bottom: 0;
-  position: absolute !important;
   background: #333;
+  border: none !important;
+}
+.minimenu .togglebtn {
+  position: absolute !important;
 }
 .togglebtn span {
 	display: inline-block;
 	max-width: 0px;
 	overflow: hidden;
 	white-space: nowrap;
-	-webkit-transition: all 500ms ease-in-out;
-	-moz-transition: all 500ms ease-in-out;
-	-o-transition: all 500ms ease-in-out;
-	transition: all 500ms ease-in-out;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	transition: all 0.3s ease;
 }
 .togglebtn:hover {
 	background: #000;
@@ -655,14 +589,14 @@ div.gassection p.title a {
 .togglebtn:hover span {
 	max-width: 500px;
 }
-.hide-for-small .togglebtn {
-  -moz-box-shadow: none; /* 0px 3px 8px rgba(0, 0, 0, 0.5); */
-  -webkit-box-shadow:  none; /* 0px 3px 8px rgba(0, 0, 0, 0.5); */
+.minimenu .togglebtn {
+  /* -moz-box-shadow: none; /* 0px 3px 8px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow:  none; /* 0px 3px 8px rgba(0, 0, 0, 0.5);
   box-shadow:none; /* 0px 3px 8px rgba(0, 0, 0, 0.5); */
-  border: 1px solid #555;
-  top: 178px;
+  /*border: 1px solid #555;*/
+  top: 174px;
 }
-.hide-for-small .toggleright {
+.minimenu .toggleright {
   -webkit-border-top-left-radius: 30px;
   -webkit-border-bottom-left-radius: 30px;
   -moz-border-radius-topleft: 30px;
@@ -672,11 +606,11 @@ div.gassection p.title a {
   padding: 10px;
   border-right: none;
 }
-.hide-for-small .togglecontact {
+.minimenu .togglecontact {
   top: 216px;
   z-index: 990;
 }
-.hide-for-small .toggleleft {
+.minimenu .toggleleft {
   -webkit-border-top-right-radius: 30px;
   -webkit-border-bottom-right-radius: 30px;
   -moz-border-radius-topright: 30px;
@@ -687,22 +621,35 @@ div.gassection p.title a {
   border-left: none;
   left: 0;
 }
-.show-for-small .togglecenter {
-  left: 100px;
-}
-.mobileheader {
-  background: #666666;
+
+.mobilemenu {
+  position: fixed;
+  background: #444444;
   overflow: hidden;
   height: 40px;
   border-bottom: 1px solid;
+  z-index: 999;
+  width: 100%;
+  text-align: center;
+  top: 0;
 }
-.mobileheader .togglebtn {
+.mobilemenu .togglecenter {
+  display: inline-block;
+}
+.mobilemenu .togglebtn {
   line-height: 40px;
-  height: 39npx;
+  height: 39px;
   padding: 0 10px;
-  border: none;
-  border-left: 1px solid #555555;
-  border-right: 1px solid #555555;
+  border-top: none !important;
+  border-left: 1px solid #555555 !important;
+  border-right: 1px solid #555555 !important;
+  box-shadow: none !important;
+}
+.mobilemenu .toggleright {
+  float: right;
+}
+.mobilemenu .toggleleft {
+  float: left;
 }
 .toggleright {
   right: 0;
@@ -780,6 +727,7 @@ h3.blockheading {
   background: #333;
   color: #EEEEEE;
   overflow: hidden;
+  z-index: 10000;
 }
 .reveal-modal h2,
 .reveal-modal h3,
@@ -804,6 +752,7 @@ h3.blockheading {
 }
 .reveal-modal-bg {
   background: rgba(0, 0, 0, 0.7);
+  z-index: 9999;
 }
 .ps-container {
   position: relative !important;
@@ -918,13 +867,13 @@ p.address a {
 	overflow: hidden;
 }
 
-.brands {
+body .brands {
 	background: rgba(0,0,0,0.1);
 	padding-bottom: 1.5em;
 	margin-bottom: 0.5em;
 }
 
-.brands li a, .colors li a {
+body .brands li a, .colors li a {
 	display: block;
 	overflow: hidden;
 }
@@ -1081,8 +1030,10 @@ p.address a {
 	padding: 0.7em 0.6em;
 	background: #555;
 	font-weight: 700;
-	margin-right: 0.5em;
 	color: #FFF !important;
+}
+.minimenu .togglecenter {
+  margin-right: 0.5em;
 }
 
 /* SELECTORS */
@@ -1287,11 +1238,17 @@ button:focus {
 	display: inline-block;
 	float: left;
 }
+.js-nav-left .sidenav-left {
+  display: block;
+}
+.js-nav-right .sidenav-right {
+  display: block;
+}
 @media only screen and (min-width: 768px) {
   .js-ready .sidenav {
     width: 20.1%;
   }
-  .js-ready #inner-wrap {
+/*  .js-ready #inner-wrap {
     left: 0;
   }
   .js-nav-left #inner-wrap {
@@ -1299,26 +1256,26 @@ button:focus {
   }
   .js-nav-right #inner-wrap {
     left: -20%;
-  }
+  }*/
   .colors .large-block-grid-24 li {
   	width: 4.1%;
   }
   /* LEFT */
-  .csstransforms3d.csstransitions.js-nav-left #inner-wrap {
+  /*.csstransforms3d.csstransitions.js-nav-left #inner-wrap {
     -webkit-transform: translate3d(20%, 0, 0) scale3d(1, 1, 1);
     -moz-transform: translate3d(20%, 0, 0) scale3d(1, 1, 1);
     -ms-transform: translate3d(20%, 0, 0) scale3d(1, 1, 1);
     -o-transform: translate3d(20%, 0, 0) scale3d(1, 1, 1);
     transform: translate3d(20%, 0, 0) scale3d(1, 1, 1);
-  }
+  }*/
   /* RIGHT */
-  .csstransforms3d.csstransitions.js-nav-right #inner-wrap {
+  /*.csstransforms3d.csstransitions.js-nav-right #inner-wrap {
     -webkit-transform: translate3d(-20%, 0, 0) scale3d(1, 1, 1);
     -moz-transform: translate3d(-20%, 0, 0) scale3d(1, 1, 1);
     -ms-transform: translate3d(-20%, 0, 0) scale3d(1, 1, 1);
     -o-transform: translate3d(-20%, 0, 0) scale3d(1, 1, 1);
     transform: translate3d(-20%, 0, 0) scale3d(1, 1, 1);
-  }
+  }*/
   .heading fieldset .field {
   	margin: 0 1% 0 0;
   	float: left;
@@ -1367,8 +1324,8 @@ button:focus {
 
 @media only screen and (max-width: 768px) {
   body {
-    border-top: 0;
-    padding-top: 0px;
+    /*border-top: 0;*/
+    /*padding-top: 0px;*/
   }
   #inner-wrap {
   	border-top: none !important;
@@ -1528,4 +1485,84 @@ button:focus {
 	.leftpad {
 		margin-left: 0 !important;
 	}
+}
+
+
+/* UI AUTOCOMPLETE */
+
+.ui-menu {
+  position: absolute;
+  cursor: default;
+  top: 0;
+  z-index: 900;
+  list-style-type: none;
+/*  -moz-box-shadow:  0 0 0.5em rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow:  0 0 0.5em rgba(0, 0, 0, 0.2);
+  box-shadow:  0 0 0.5em rgba(0, 0, 0, 0.2);
+*/
+/*  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;*/
+  background: #FFF;
+  border: 1px solid #aaaaaa;
+}
+.ui-menu:not(.product-autocomplete) {
+  max-width: 330px;
+  text-transform: uppercase;
+}
+.ui-menu .ui-menu-item {
+  margin: 0;
+  padding: 0;
+}
+.ui-menu:not(.product-autocomplete) .ui-menu-item a {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.ui-menu .ui-menu-item a {
+  display: block;
+  padding: .2em .4em;
+  line-height: 1.5;
+  zoom: 1;
+  border-bottom: 1px solid #dddddd;
+  background: #EFEFEF;
+  transiton: background-color 0.3s;
+  -moz-transiton: background-color 0.3s;
+  -webkit-transiton: background-color 0.3s;
+}
+
+.ui-menu-loading {
+  background: #ffffff url('mysite/images/loader.gif') right center no-repeat;
+}
+* html .ui-menu {
+  width: 1px;
+}
+.ui-state-hover,
+.ui-widget-content .ui-state-hover,
+.ui-widget-header .ui-state-hover,
+.ui-menu .ui-menu-item a.ui-state-focus,
+.ui-widget-content .ui-state-focus,
+.ui-widget-header .ui-state-focus {
+  background: #999999 !important;
+  color: #FFFFFF;
+  /*border-bottom: none;*/
+}
+.ui-state-focus h4,
+.ui-state-focus h3 {
+  color: #FFFFFF !important;
+}
+.ui-helper-hidden-accessible {
+  display: none;
+}
+
+/* PRODUCT AUTOCOMPLETE */
+.ui-menu.product-autocomplete {
+  left: auto !important;
+  right: 0 !important;
+  width: 100%;
+}
+@media screen and (min-width:800px) {
+  .ui-menu.product-autocomplete {
+    max-width: 700px;
+  }
 }
