--- a/themes/gas/css/style.css
+++ b/themes/gas/css/style.css
@@ -298,7 +298,7 @@ div.gassection p.title a {
 .heading {
   padding: 1.2em 0;
   margin-bottom: 1em;
-  background: #444;
+  background: rgba(0,0,0,0.8);
 }
 .heading h1 {
 	margin: 0;
@@ -314,7 +314,7 @@ div.gassection p.title a {
 	color: #ccc;
 }
 .updates {
-  background: rgba(0, 0, 0, 0.75);
+  background: rgba(0, 0, 0, 0.85);
   /*margin-top: 2em;*/
   padding-top: 1em;
   margin-bottom: 0;
@@ -585,6 +585,7 @@ div.gassection p.title a {
 }
 .togglebtn:hover {
 	background: #000;
+  box-shadow: 0 0 6px rgba(255,255,255,0.2);
 }
 .togglebtn:hover span {
 	max-width: 500px;
@@ -867,16 +868,16 @@ p.address a {
 	overflow: hidden;
 }
 
-body .brands {
+/*body:not(.brands) .brands {
 	background: rgba(0,0,0,0.1);
 	padding-bottom: 1.5em;
 	margin-bottom: 0.5em;
 }
 
-body .brands li a, .colors li a {
+body:not(.brands) .brands li a, .colors li a {
 	display: block;
 	overflow: hidden;
-}
+}*/
 
 .th {
 	border: 3px solid #FFF;
@@ -901,7 +902,7 @@ body .brands li a, .colors li a {
 
 /* SOCIAL STREAM */
 .socialstream {
-  background: #999999;
+  background: rgba(0,0,0,0.6);
   margin-top: 2em;
   padding: 1em 0;
 }
@@ -1404,6 +1405,9 @@ button:focus {
 .BrandView .heading {
 	margin-bottom: 0 !important;
 }
+.BrandView .heading .sharetext {
+  margin-top: 10px;
+}
 
 
 
@@ -1458,22 +1462,23 @@ button:focus {
 .leftpad {
 	margin-left: 10px;
 }
-.product-title {
+/*.product-title {
 	text-align: center;
-}
+}*/
 .product-title span {
 	display: inline-block;
-	background: #000;
-	color: #FFF;
-	text-align: center;
-	font-size: 0.9rem;
+	/*background: #000;*/
+	/*color: #FFF;*/
+	text-align: left;
+	font-size: 1rem;
 	font-weight: 700;
-	padding: 0 0.4rem;
+	/*padding: 0 0.4rem;*/
+	/*max-width: 90%;*/
+	/*overflow: hidden;*/
+	/*white-space: nowrap;*/
+	/*text-overflow: ellipsis;*/
 	max-width: 90%;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	max-width: 90%;
+  height: 4rem;
 }
 .productsearchform {
 	margin: 1.1em 0 0 0;
