--- a/themes/gas/css/style.css
+++ b/themes/gas/css/style.css
@@ -90,7 +90,7 @@ h5 a:hover {
   color: rgba(0,0,0,0.5);
 }
 
-.layout {
+body:not(.ProductView) .layout {
   background: #E8E8E8;
 }
 
@@ -1570,4 +1570,11 @@ button:focus {
   .ui-menu.product-autocomplete {
     max-width: 700px;
   }
+}
+
+/* BRANDS */
+
+.search-suggestions a {
+  text-transform: uppercase !important;
+  color: #000 !important;
 }
