Updated Brand title output, layouts

--- a/themes/gas/css/style.css
+++ b/themes/gas/css/style.css
@@ -1588,3 +1588,12 @@ button:focus {
 .search-suggestions a {
   color: #000 !important;
 }
+
+.result-count,
+.result-count strong {
+  font-size: 0.9em;
+  font-weight: 300;
+}
+.result-count {
+  color: #999;
+}
